fixed alignment of mobile banner

--- a/css/app.sass
+++ b/css/app.sass
@@ -44,6 +44,7 @@ a
         position: fixed
         bottom: 0
         left: 0
+        z-index: 100000
     .ad-large
         display: none
 @media (min-width: 751px)
@@ -51,9 +52,8 @@ a
         display: none
     .ad-large
         display: block
+        margin-bottom: 10px
 
-.ad-small, .ad-large
-    margin-bottom: 10px
 
 
 .image
